--- a/src/components/Footer/footer.module.css
+++ b/src/components/Footer/footer.module.css
@@ -1,7 +1,6 @@
 .footer {
   background-color: black;
   color: var(--secondary-color);
-  margin-top: 340px;
 
   a {
     font-size: 15px;
@@ -12,8 +11,6 @@
   }
 
   @media all and (max-width: 989px) {
-    margin-top: 140px;
-
     .footer-logo img {
       width: 82px;
     }
